--- a/FirstProject/Views/Gigs/Create.cshtml
+++ b/FirstProject/Views/Gigs/Create.cshtml
@@ -1,7 +1,29 @@
-﻿
+﻿@model FirstProject.ViewModels.GigFormViewModel
 @{
     ViewBag.Title = "Create";
 }
 
 <h2>Create</h2>
 
+<form>
+    <div class="form-group">
+        @Html.LabelFor(m=> m.Venue)
+        @Html.TextBoxFor(m=>m.Venue, new {@class = "form-control"})</div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.Date)
+        @Html.TextBoxFor(m => m.Venue, new { @class = "form-control" })
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.Time)
+        @Html.TextBoxFor(m => m.Venue, new { @class = "form-control" })
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.Genre)
+        @Html.DropDownListFor(m => m.Genre, new SelectList(Model.Genres, "Id", "Name"), "", new {@class ="form-control" })
+    </div>
+    <div>
+        <button type="submit" class="btn btn-primary">Save</button>
+    </div>
+ 
+
+</form>
